--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -5,7 +5,7 @@
     <TargetFramework>net5.0-windows</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
     <RootNamespace>KronosDMS_Client</RootNamespace>
-    <Version>0.8.0</Version>
+    <Version>0.9.97</Version>
   </PropertyGroup>
 
   <ItemGroup>
@@ -21,6 +21,12 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Update="Forms\Parts\KitForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Update="Forms\Server\MakesMaintenanceForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Update="Forms\Server\UserGroupsSearchForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Update="Properties\Resources.Designer.cs">
