--- a/src/Client/Client.csproj
+++ b/src/Client/Client.csproj
@@ -12,12 +12,12 @@
   <ItemGroup>
     <PackageReference Include="itext7" Version="7.2.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="Veldrid" Version="4.8.0" />
-    <PackageReference Include="Veldrid.StartupUtilities" Version="4.8.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\deps\ImGui.NET\src\ImGui.NET\ImGui.NET.csproj" />
+    <ProjectReference Include="..\..\deps\veldrid\src\Veldrid.StartupUtilities\Veldrid.StartupUtilities.csproj" />
+    <ProjectReference Include="..\..\deps\veldrid\src\Veldrid\Veldrid.csproj" />
     <ProjectReference Include="..\KronosDMS\KronosDMS.csproj" />
   </ItemGroup>
 
@@ -33,8 +33,9 @@
   </ItemGroup>
 
   <ItemGroup>
-	<Content Include="..\..\deps\ImGui.NET\deps\cimgui\win-x64\cimgui.dll" CopyToOutputDirectory="PreserveNewest" />
-	<Content Include="..\..\deps\ImGui.NET\deps\cimgui\osx-x64\cimgui.dylib" CopyToOutputDirectory="PreserveNewest" />
+	  <Content Include="..\..\deps\veldrid\src\Veldrid.SDL2\native\win-x64\SDL2.dll" CopyToOutputDirectory="PreserveNewest" />
+	  <Content Include="..\..\deps\ImGui.NET\deps\cimgui\win-x64\cimgui.dll" CopyToOutputDirectory="PreserveNewest" />
+	  <Content Include="..\..\deps\ImGui.NET\deps\cimgui\osx-x64\cimgui.dylib" CopyToOutputDirectory="PreserveNewest" />
     <Content Include="..\..\deps\ImGui.NET\deps\cimgui\linux-x64\cimgui.so" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
 
