Logger and new client versioning

--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -5,7 +5,7 @@
     <TargetFramework>net5.0-windows</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
     <RootNamespace>KronosDMS_Client</RootNamespace>
-    <Version>0.9.99</Version>
+    <Version>$([System.DateTime]::Now.ToString("yy.MM.dd-rHHmm"))</Version>
   </PropertyGroup>
 
   <ItemGroup>
