--- a/src/KronosDMS/KronosDMS.csproj
+++ b/src/KronosDMS/KronosDMS.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="log4net" Version="2.0.12" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="SevenZip" Version="19.0.0" />
   </ItemGroup>
 
 </Project>
